src/test/ui/const-generics/min_const_generics/invalid-patterns.64bit.stderr
error[E0308]: mismatched types
  --> $DIR/invalid-patterns.rs:29:21
   |
LL |   get_flag::<false, 0xFF>();
   |                     ^^^^ expected `char`, found `u8`

error[E0308]: mismatched types
  --> $DIR/invalid-patterns.rs:31:14
   |
LL |   get_flag::<7, 'c'>();
   |              ^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/invalid-patterns.rs:33:14
   |
LL |   get_flag::<42, 0x5ad>();
   |              ^^ expected `bool`, found integer

error[E0308]: mismatched types
  --> $DIR/invalid-patterns.rs:33:18
   |
LL |   get_flag::<42, 0x5ad>();
   |                  ^^^^^ expected `char`, found `u8`

error[E0080]: evaluation of constant value failed
  --> $DIR/invalid-patterns.rs:38:32
   |
LL |   get_flag::<false, { unsafe { char_raw.character } }>();
   |                                ^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected a valid unicode scalar value (in `0..=0x10FFFF` but not in `0xD800..=0xDFFF`)

error[E0080]: evaluation of constant value failed
  --> $DIR/invalid-patterns.rs:40:25
   |
LL |   get_flag::<{ unsafe { bool_raw.boolean } }, 'z'>();
   |                         ^^^^^^^^^^^^^^^^ type validation failed: encountered 0x42, but expected a boolean

error[E0080]: evaluation of constant value failed
  --> $DIR/invalid-patterns.rs:42:25
   |
LL |   get_flag::<{ unsafe { bool_raw.boolean } }, { unsafe { char_raw.character } }>();
   |                         ^^^^^^^^^^^^^^^^ type validation failed: encountered 0x42, but expected a boolean

error[E0080]: evaluation of constant value failed
  --> $DIR/invalid-patterns.rs:42:58
   |
LL |   get_flag::<{ unsafe { bool_raw.boolean } }, { unsafe { char_raw.character } }>();
   |                                                          ^^^^^^^^^^^^^^^^^^ type validation failed: encountered uninitialized bytes, but expected a valid unicode scalar value (in `0..=0x10FFFF` but not in `0xD800..=0xDFFF`)

error: aborting due to 8 previous errors

Some errors have detailed explanations: E0080, E0308.
For more information about an error, try `rustc --explain E0080`.
